<resources>
    <string name="app_name">JavaProject</string>
    <string name="server_ip_input_hint">Enter server ip</string>
    <string name="server_port_input_hint">Enter server port</string>
    <string name="signup_button_text">sign up</string>
    <string name="login_button_text">login</string>

    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="age_input_hint">Age</string>
    <string name="signup_page_title">Enter your information</string>

    <string name="confirm_button">confirm</string>
    <string name="login_page_title">Enter your login info</string>

</resources>